--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  font_awesome: ^5.10.1
   local_auth: ^1.1.0
   hive_flutter: ^1.0.0
   hive: ^2.0.2
