--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  font_awesome: ^5.10.1
+  mbi: ^0.0.9
   local_auth: ^1.1.0
   hive_flutter: ^1.0.0
   hive: ^2.0.2
   flutter_secure_storage: ^4.1.0
   encrypt: ^5.0.0
   fluttertoast: ^8.0.3
+  # Added for giving extra options to list tile 
+  flutter_slidable: ^0.6.0
 
 dev_dependencies:
   flutter_test:
